--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -11,6 +11,11 @@
     align-items: center;
     color: white;
   }
+  @media (max-width:767px){
+    .footer-container{
+      max-width: 100vw;
+    }
+  }
   .inner-container {
     display: flex;
     flex-direction: column;
