--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,37 +1,154 @@
 .cart-container {
-    padding: 20px;
-    background-color: #f9fbfe;
-  
-    border: 1px solid #0b69ff1a;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    margin: 0px 50px 20px 50px;
-  }
-  .line {
-    border: 1px dashed #cbd2d9;
-  }
-  .cart-items-container {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  .cart-headers {
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    background-color: #cddaf048;
-    padding: 10px;
-    border-radius: 10px 10px 0 0;
-    font-weight: bold;
-    text-align: center;
-  }
-  .remove-cart-items {
-    color: white;
-    background-color: orangered;
-    padding: 10px 12px;
-    border-width: 0px;
-    border-radius: 10px;
-  }
-  .cart-header-item {
-    text-align: left;
-  }
-  
+  padding: 20px;
+  background-color: #f9fbfe;
+
+  border: 1px solid #0b69ff1a;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  margin: 0px 50px 20px 50px;
+}
+.line {
+  border: 1px dashed #cbd2d9;
+}
+.cart-items-container {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.cart-headers {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  background-color: #cddaf048;
+  padding: 10px;
+  border-radius: 10px 10px 0 0;
+  color: #475569;
+  text-align: center;
+  font-family: DM Sans;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.20000000298023224px;
+
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.remove-cart-items {
+  color: white;
+  background-color: orangered;
+  padding: 10px 12px;
+  border-width: 0px;
+  border-radius: 10px;
+}
+.cart-header-item {
+  text-align: left;
+}
+.order-total-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.total-amount-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.total-amount {
+  color: #3e4c59;
+  font-family: DM Sans;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32px;
+}
+.rupee-sign {
+  color: #3e4c59;
+  font-family: DM Sans;
+  font-size: 18px;
+  font-weight: 500;
+}
+.place-order-button {
+  color: white;
+  background-color: #f7931e;
+  border-radius: 10px;
+  padding: 8px 10px;
+  border-width: 0px;
+  cursor: pointer;
+}
+.order-total-text {
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32px;
+  color: #3e4c59;
+}
+
+.empty-view-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.empty-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.order-now-button {
+  color: white;
+  background-color: #f7931e;
+  border-radius: 10px;
+  padding: 8px 10px;
+  border-width: 0px;
+  cursor: pointer;
+}
+.no-order-yet-text {
+  font-family: DM Sans;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 28px;
+  text-align: center;
+  color: #1e293b;
+}
+.no-order-para {
+  font-family: DM Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  color: #64748b;
+}
+
+.order-placed-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+}
+.payment-successful-text {
+  font-family: DM Sans;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32px;
+  text-align: center;
+  color: #1e293b;
+}
+.order-placed-para {
+  font-family: DM Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+
+  color: #64748b;
+}
+.go-to-home {
+  color: white;
+  background-color: #f7931e;
+  border-radius: 10px;
+  padding: 8px 10px;
+  border-width: 0px;
+  cursor: pointer;
+}
